--- a/temples-inn-suites/css/main.css
+++ b/temples-inn-suites/css/main.css
@@ -521,6 +521,23 @@ form #room .sbs label .location-select{
 #references #temple-inn-home{
     grid-template-columns: 1fr;
 }
+/*services page*/
+#servicesection #temple-inn-home{
+    grid-template-columns: 1fr;
+}
+#servicesection #temple-inn-home .services img{
+    box-shadow: 10px 10px 30px;
+    border-radius: 10px;
+}
+/*missionary page*/
+#missionarysection #temple-inn-home{
+    grid-template-columns: 1fr;
+}
+#missionary #temple-inn-home #missionary-img img{
+    box-shadow: 10px 10px 30px;
+    border-radius: 10px;
+}
+
 
 
 
