--- a/temples-inn-suites/css/medium.css
+++ b/temples-inn-suites/css/medium.css
@@ -244,12 +244,83 @@
         box-shadow: 10px 10px 30px;
     }
     /*services page*/
-
     #servicesection #temple-inn-home .smallview{
         margin-top:5px;
         margin-bottom:5px;
-
     }
+    #servicesection #temple-inn-home .services #text1,
+    #servicesection #temple-inn-home .services #text2{
+        display:grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    #servicesection #temple-inn-home .services #text1 ul{
+        grid-column: 1;
+        grid-row:1;
+        margin-top:5rem;
+    }
+    #servicesection #temple-inn-home .services #text2 ul{
+        grid-column: 2;
+        grid-row:1;
+        margin-top:5rem;
+    }
+    #servicesection #temple-inn-home .services #text1 #ftn,
+    #servicesection #temple-inn-home .services #text1 #pool,
+    #servicesection #temple-inn-home .services #text2 #pbl{
+        display:block;
+    }
+    #servicesection #temple-inn-home .services #text1 #ftn{
+        display:none;
+    }  
+    #servicesection #temple-inn-home .services #text1 #fml{
+        margin:0;
+        margin-bottom: 10px;
+    }
+   
+    #servicesection #temple-inn-home .services #text1 #img-text1{
+        grid-column: 2;
+        grid-row:1;
+        justify-items: center;
+        margin-top:5rem;
+        margin-right:3rem;
+    }
+    #servicesection #temple-inn-home .services #text2 #img-text2{
+        margin:0;
+        grid-column: 1;
+        grid-row:1;
+        justify-items: center;
+        margin-top:1rem;
+        margin-left:3rem;
+        margin-bottom: 1rem;
+    }
+    #servicesection #temple-inn-home .services #text2 #bkfst{
+        margin-left:0;
+    }
+    #servicesection #temple-inn-home .services #text1 h3{
+        text-align: center;
+        grid-row: 1;
+        grid-column: 1;
+        margin-bottom: 6rem;
+    }
+    #servicesection #temple-inn-home .services #text2 h3{
+        text-align: center;
+        grid-row: 1;
+        grid-column: 2;
+        margin-bottom: 6rem;
+    }
+    #servicesection #temple-inn-home .services #services-img {
+        display:block;
+        padding-top:2rem;
+        margin-left:10px;
+    }
+    #servicesection #temple-inn-home .services #services-img img{
+        margin-right: 2rem;
+        border-radius: 30%;
+    }
+    #servicesection #temple-inn-home .services #text1,
+    #servicesection #temple-inn-home .services #text2{
+        font-size:16px;
+    }
+ 
     /*reception page*/
     #receptionsection #temple-inn-home{
         grid-template-columns: 1fr;
