--- a/temples-inn-suites/css/large.css
+++ b/temples-inn-suites/css/large.css
@@ -197,5 +197,19 @@
         margin-left:1rem;
 
     }
+    /*services page*/
+    #servicesection #temple-inn-home .services #services-img {
+        display:block;
+        padding-top:2rem;
+        margin-left:10px;
+    }
+    #servicesection #temple-inn-home .services #services-img img{
+        margin-right: 2rem;
+        border-radius: 30%;
+    }
+    #servicesection #temple-inn-home .services #text1 #img-text1{
+        margin-right:3rem;
+        margin-bottom: 3rem;
+    }
     
 }
