--- a/temples-inn-suites/css/main.css
+++ b/temples-inn-suites/css/main.css
@@ -202,6 +202,7 @@ main #about-us, .banner {
     margin-top:5px;
     border-radius: 5px;
     margin-bottom: 10px;
+    padding:20px;
     background-color: #d9ae61;
 }
 .temple #temple1 #details1, 
