--- a/temples-inn-suites/css/main.css
+++ b/temples-inn-suites/css/main.css
@@ -570,20 +570,26 @@ form #room .sbs label .location-select{
 #servicesection #temple-inn-home .services #text2 #bkfst{
         display:flex;
         flex-direction: column;
-        margin:10px;
+        margin-bottom:10px;
+        margin-left:auto;
+        margin-right:auto;
     }
 #servicesection #temple-inn-home .services #services-img{
     display:none;
 }
 #servicesection #temple-inn-home .services #text1 #img-text1,
 #servicesection #temple-inn-home .services #text2 #img-text2{
-    margin-left:auto;
+    margin-left:30px;
     margin-right: 10px;
     margin-bottom: 20px;
 }
 #servicesection #temple-inn-home .services #text1 #img-text2{
     margin-left:auto;
     margin-right: 10px;
+}
+#servicesection #temple-inn-home .services{
+    margin-left:auto;
+    margin-right:auto;
 }
 /*missionary page*/
 #missionarysection #temple-inn-home{
