--- a/temples-inn-suites/css/main.css
+++ b/temples-inn-suites/css/main.css
@@ -638,6 +638,33 @@ form #room .sbs label .location-select{
     margin-bottom:30px;
 }
 
+/*Reference Page*/
+#references #temple-inn-home #attribution{
+    border: 2px solid black;
+    background-color: #d9ae61;
+    border-radius: 20px;
+    margin-left:auto;
+    margin-bottom: 30px;
+    margin-right:auto;
+    margin-top:30px;
+    width:80%;
+    box-shadow: 10px 10px 20px;
+}
+#references #temple-inn-home #attribution h3{
+    font-size: 24px;
+    font-family: 'Lato', sans-serif ;
+    box-shadow: 10px 10px 20px;
+    text-align: center;
+    margin-left:30px;
+    margin-right:30px;
+}
+#references #temple-inn-home #attribution ul li{
+    font-size: 14px;
+    font-family:'Montserrat Alternates', sans-serif;
+    line-height: 20px;
+
+}
+
 
 
 
