--- a/temples-inn-suites/css/large.css
+++ b/temples-inn-suites/css/large.css
@@ -209,5 +209,55 @@
         margin-right:3rem;
         margin-bottom: 2rem;
     }
+
+    /* weather*/
     
-}
+    #weatherForecast {
+        margin-bottom: 20px;
+        color: #333;
+      }
+      
+      #location-form {
+        margin-bottom: 20px;
+        display: flex;
+        gap: 10px;
+      }
+      
+      #location-form select, #location-form button {
+        padding: 10px;
+        font-size: 16px;
+        border-radius: 4px;
+        border: 1px solid #ddd;
+      }
+      
+      #forecast-container {
+        display: flex;
+        gap: 15px;
+      }
+      
+      .forecast-box {
+        width: 180px;
+        background-color: lightblue;
+        border-radius: 8px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        padding: 20px;
+        text-align: center;
+      }
+      
+      .forecast-box h2 {
+        font-size: 5px;
+        margin-bottom: 10px;
+        color: #333;
+      }
+      
+      .forecast-box img {
+        width: 50px;
+        height: 50px;
+        margin-bottom: 10px;
+      }
+      
+      .forecast-box p {
+        margin-bottom: 8px;
+        color: #666;
+        font-size: 14px;
+      }
